--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,13 @@
       "@store/*": ["./src/store/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@constants/*": ["./src/constants/*"],
-      "@api/*": ["./src/api/*"],
+      "@apihelpers/*": ["src/api-helpers/*"],
       "@components/*": ["./src/components/*"],
       "@backgroundcomponents/*": ["./src/background-components/*"],
       "@utils/*": ["./src/utils/*"],
       "@src/*": ["./src/*"]
     }
   },
-  "include": ["src", "electron/index.cjs"],
+  "include": ["src", "electron/index.cjs", "src-server/server.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
