--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "author": "Jing Hua <betterchatgpt@mail.tjh.sg>",
   "description": "Play and chat smarter with BetterChatGPT - an amazing open-source web app with a better UI for exploring OpenAI's ChatGPT API!",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "client": "vite",
+    "client-build": "tsc && vite build",
+    "server": "node src-server/server.js",
     "preview": "vite preview",
     "electron": "concurrently -k \"BROWSER=none yarn dev\" \"wait-on tcp:5173 && electron .\"",
     "pack": "yarn build && electron-builder --dir",
@@ -69,7 +70,12 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "uuid": "^9.0.0",
-    "zustand": "^4.3.6"
+    "zustand": "^4.3.6",
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "dotenv":"^16.4.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
