--- a/package.json
+++ b/package.json
@@ -73,9 +73,12 @@
     "zustand": "^4.3.6",
     "web-vitals": "^2.1.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
     "node-fetch": "^2.6.1",
-    "dotenv":"^16.4.5"
+    "dotenv":"^16.4.5",
+    "@azure/identity": "^3.1.0",
+    "@azure/monitor-query": "^1.1.0",
+    "axios": "^1.4.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
