fix: new deployment pipeline to ACR

--- a/.github/workflows/docker-image-to-acr-dev.yml
+++ b/.github/workflows/docker-image-to-acr-dev.yml
@@ -19,6 +19,8 @@ jobs:
   Build-and-Push-Image:
     runs-on: ubuntu-latest
 
+    environment: dev
+
     steps:
     - uses: actions/checkout@v2
 
