--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "html2canvas": "^1.4.1",
     "i18next": "^22.4.11",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -66,6 +67,8 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "papaparse": "^5.4.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
