--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^5.3.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "express-openid-connect": "^2.17.1",
     "express-session": "^1.18.0",
     "html2canvas": "^1.4.1",
     "i18next": "^22.4.11",
