--- a/.github/workflows/docker-image-to-acr.yml
+++ b/.github/workflows/docker-image-to-acr.yml
@@ -16,6 +16,8 @@ env:
   VITE_COMPANY_NAME: ${{ vars.VITE_COMPANY_NAME }}
   VITE_ANTHROPIC_ENABLE: ${{ vars.VITE_ANTHROPIC_ENABLE }}
   VITE_CHECK_AAD_AUTH: ${{ vars.VITE_CHECK_AAD_AUTH }}
+  VITE_LOGIN_URL: ${{ vars.VITE_LOGIN_URL }}
+  VITE_LOGOUT_URL: ${{ vars.VITE_LOGOUT_URL }}
 
 jobs:
   Build-and-Push-Image:
@@ -36,6 +38,9 @@ jobs:
         --build-arg VITE_COMPANY_NAME="${{ env.VITE_COMPANY_NAME }}" \
         --build-arg VITE_ANTHROPIC_ENABLE="${{ env.VITE_ANTHROPIC_ENABLE }}" \
         --build-arg VITE_CHECK_AAD_AUTH="${{ env.VITE_CHECK_AAD_AUTH }}"
+        --build-arg VITE_LOGIN_URL="${{ env.VITE_LOGIN_URL }}"
+        --build-arg VITE_LOGOUT_URL="${{ env.VITE_LOGOUT_URL }}"
+
     
     - name: Push image to ACR
       run: |
