Added Demo mode for public deployment

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-VITE_COMPANY_NAME=(company name)
 VITE_ANTHROPIC_ENABLE=Y
-VITE_OPENAI_O1_ENABLE=N
+VITE_OPENAI_O1_ENABLE=Y
 VITE_CHECK_AAD_AUTH=N
+VITE_LOGOUT_URL=/logout
+VITE_LOGIN_URL=/login
