--- a/.env.server.local.example
+++ b/.env.server.local.example
@@ -1,14 +1,42 @@
-#Create a .env.server.local file for configuring local development environment for server-side code
+#use .env.server.local for configuring local development environment for server-side code
 
 OPENAI_API_URL=https://api.openai.com/v1/chat/completions
 OPENAI_API_KEY=.....
 
 ANTHROPIC_API_URL=https://api.anthropic.com/v1/messages
-ANTHROPIC_API_KEY=....
+ANTHROPIC_API_KEY=.....
 
-AZURE_LOG_ANALYTICS_RESOURCE_URI=https://.......eastus-1.ingest.monitor.azure.com
-AZURE_LOG_ANALYTICS_DCR_IMMUTABLE_ID=dcr-7f48d........
-AZURE_LOG_ANALYTICS_REQ_LOGS_DS=Custom-chatbot_app_api_requests_CL
-AZURE_LOG_ANALYTICS_RES_LOGS_DS=Custom-chatbot_app_api_responses_CL
 
-APP_INGRESS_URL_1=http://localhost:
+LOG_DESTINATION_CONSOLE=Y
+
+LOG_DESTINATION_POSTGRESQL=N
+
+#To enable Azure Log Analytics, set this to Y and configure the following variables
+LOG_DESTINATION_AZURE_LOG_ANALYTICS=N
+AZURE_LOG_ANALYTICS_RESOURCE_URI=.....
+AZURE_LOG_ANALYTICS_DCR_IMMUTABLE_ID=.....
+AZURE_LOG_ANALYTICS_REQ_LOGS_DS=.....
+AZURE_LOG_ANALYTICS_RES_LOGS_DS=.....
+
+
+#For Auth0 authentication set to Y and configure the following variables
+AUTH_AUTH0=N
+OIDC_ISSUERBASEURL=...
+OIDC_CLIENTID=...
+OIDC_BASEURL=http://localhost:5500
+AUTH_SECRET=... 
+#^^ Random String
+
+AUTH_AAD_EXTERNAL=N
+
+#For public demo, simulate API responses
+DEMO_MODE=N
+
+#These variables are going to the frontend to configure UI behavior
+COMPANY_SYSTEM_PROMPT="You are AI Belvedere, an access interface to AI Language Models"
+COMPANY_NAME=Your Company or Family Name
+
+#Not currently used (see VITE variables on the frontend instead)
+ANTHROPIC_ENABLE=Y
+OPENAI_O1_ENABLE=Y
+CHECK_AAD_AUTH=N
